-Incorporación de nuevo proyecto -Carpetas pages,css,js,img

--- a/pages/movie.html
+++ b/pages/movie.html
@@ -18,10 +18,9 @@
 
   </header>
   <main>
-    <div id="movie-details">
-      <h1>Detalles de la Película</h1>
-      <div id="details"></div>
-    </div>
+    <section id="movie-details" class="details">
+      <article id="details"></article>
+    </section>
   </main>
   <footer>
 
