--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
     rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <title>Document</title>
   <link rel="stylesheet" href="css/styles.css">
 </head>
@@ -22,17 +23,18 @@ Juntos, <fieldset> y <legend> ayudan a estructurar y mejorar tanto la usabilidad
     <section class="cinema">
       <h1 class="cinema__title">CINEMA</h1>
       <form id="searchForm" class="cinema__form" autocomplete="off">
-        <label class="cinema__label">
-        <input type="search" id="search" class="cinema__input" aria-label="Buscar película" placeholder="Buscar una película, serie, persona......">
-      </label>
-        <button type="button" id="btnSearch" class="cinema__button">Buscar</button>
+       <div class="cinema__search-wrapper">
+         <input type="search" id="search" class="cinema__input" aria-label="Buscar película" placeholder="Buscar una película, serie, persona......">
+         <button type="button" id="btnSearch" class="cinema__button"><i class="fa-solid fa-magnifying-glass"></i></button>
+       </div>
       </form>
     </section>
     <section id="favorites" class="favorites">
       <h2 class="favorites__title">Películas Favoritas</h2>
       <div class="favorites__list" id="favorites__list"></div>
     </section>
-    <section>
+    <section class="result">
+      <h2 class="favorites__title">Resultados</h2>
       <div class="pelicula" id="pelicula"></div>
     </section>
   </main>
