--- a/index.html
+++ b/index.html
@@ -9,13 +9,28 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
     rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <title>Document</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+    integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <title>Cinema | Peliculas </title>
   <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
-  <header></header>
+  <header>
+    <button class="open-menu" id="open"><i class="fa-solid fa-bars"></i></button>
+    <nav class="nav" id="nav">
+      <button class="close-menu" id="close"><i class="fa-solid fa-bars"></i></i></button>
+      <ul class="nav__list">
+        <li class="nav__item nav__item--active"><a href="index.html" class="nav__link" id="nav__link">Peliculas</a></li>
+        <li class="nav__item">
+          <a href="#" class="nav__link" id="nav__link">Series</a>
+        </li>
+        <li class="nav__item"><a href="#" class="nav__link" id="nav__link">Actores</a></li>
+        <li class="nav__item"><a href="#" class="nav__link" id="nav__link">Novedades</a></li>
+      </ul>
+    </nav>
+  </header>
   <main>
     <!-- <fieldset>: Agrupa y organiza elementos relacionados en un formulario.
 <legend>: Proporciona una etiqueta o descripción para el grupo de campos dentro del <fieldset>.
@@ -23,10 +38,13 @@ Juntos, <fieldset> y <legend> ayudan a estructurar y mejorar tanto la usabilidad
     <section class="cinema">
       <h1 class="cinema__title">CINEMA</h1>
       <form id="searchForm" class="cinema__form" autocomplete="off">
-       <div class="cinema__search-wrapper">
-         <input type="search" id="search" class="cinema__input" aria-label="Buscar película" placeholder="Buscar una película, serie, persona......">
-         <button type="button" id="btnSearch" class="cinema__button"><i class="fa-solid fa-magnifying-glass"></i></button>
-       </div>
+        <div class="cinema__search-wrapper">
+          <input type="text" id="search" class="cinema__input" aria-label="Buscar película"
+            placeholder="Buscar una película">
+          <button type="button" id="btnSearch" class="cinema__button"><i
+              class="fa-solid fa-magnifying-glass"></i></button>
+        </div>
+        <div id="searchAlert"></div>
       </form>
     </section>
     <section id="favorites" class="favorites">
@@ -40,6 +58,7 @@ Juntos, <fieldset> y <legend> ayudan a estructurar y mejorar tanto la usabilidad
   </main>
   <footer></footer>
   <script src="js/script.js"></script>
+  <script src="js/menu.js"></script>
 </body>
 
 </html>
