--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <ul class="nav__list">
         <li class="nav__item nav__item--active"><a href="index.html" class="nav__link" id="nav__link">Peliculas</a></li>
         <li class="nav__item">
-          <a href="#" class="nav__link" id="nav__link">Series</a>
+          <a href="pages/series.html" class="nav__link" id="nav__link">Series</a>
         </li>
         <li class="nav__item"><a href="#" class="nav__link" id="nav__link">Actores</a></li>
         <li class="nav__item"><a href="#" class="nav__link" id="nav__link">Novedades</a></li>
@@ -57,7 +57,7 @@ Juntos, <fieldset> y <legend> ayudan a estructurar y mejorar tanto la usabilidad
     </section>
   </main>
   <footer></footer>
-  <script src="js/script.js"></script>
+  <script src="js/movie.js"></script>
   <script src="js/menu.js"></script>
 </body>
 
