--- a/pages/view-movie.html
+++ b/pages/view-movie.html
@@ -24,10 +24,10 @@
       <ul class="nav__list">
         <li class="nav__item nav__item--active"><a href="../index.html" class="nav__link" id="nav__link">Peliculas</a></li>
         <li class="nav__item">
-          <a href="#" class="nav__link" id="nav__link">Series</a>
+          <a href="series.html" class="nav__link" id="nav__link">Series</a>
         </li>
-        <li class="nav__item"><a href="#" class="nav__link" id="nav__link">Actores</a></li>
-        <li class="nav__item"><a href="#" class="nav__link" id="nav__link">Novedades</a></li>
+        <li class="nav__item"><a href="actors.html" class="nav__link" id="nav__link">Actores</a></li>
+        <li class="nav__item"><a href="news.html" class="nav__link" id="nav__link">Novedades</a></li>
       </ul>
     </nav>
   </header>
