--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ Juntos, <fieldset> y <legend> ayudan a estructurar y mejorar tanto la usabilidad
       <form id="searchForm" class="cinema__form" autocomplete="off">
         <div class="cinema__search-wrapper">
           <input type="text" id="search" class="cinema__input" aria-label="Buscar película"
-            placeholder="Buscar una película">
+            placeholder="Buscar película">
           <button type="button" id="btnSearch" class="cinema__button"><i
               class="fa-solid fa-magnifying-glass"></i></button>
         </div>
