--- a/pages/actors.html
+++ b/pages/actors.html
@@ -25,7 +25,7 @@
                 <li class="nav__item nav__item"><a href="../index.html" class="nav__link" id="nav__link">Peliculas</a>
                 </li>
                 <li class="nav__item">
-                    <a href="#" class="nav__link" id="nav__link">Series</a>
+                    <a href="series.html" class="nav__link" id="nav__link">Series</a>
                 </li>
                 <li class="nav__item--active"><a href="actors.html" class="nav__link" id="nav__link">Actores</a></li>
                 <li class="nav__item"><a href="news.html" class="nav__link" id="nav__link">Novedades</a></li>
