--- a/pages/series.html
+++ b/pages/series.html
@@ -38,7 +38,7 @@
             <form id="searchForm" class="cinema__form" autocomplete="off">
                 <div class="cinema__search-wrapper">
                     <input type="text" id="search" class="cinema__input" aria-label="Buscar series"
-                        placeholder="Buscar una serie">
+                        placeholder="Buscar serie">
                     <button type="button" id="btnSearch" class="cinema__button"><i
                             class="fa-solid fa-magnifying-glass"></i></button>
                 </div>
