-Corrección de errores -Actualización de peliculas -Nuevas funcionalidades (ver,eliminar,agregar)

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ Juntos, <fieldset> y <legend> ayudan a estructurar y mejorar tanto la usabilidad
       <div class="favorites__list" id="favorites__list"></div>
     </section>
     <section class="result">
-      <h2 class="favorites__title">Resultados</h2>
+      <h2 class="result__title">Peliculas</h2>
       <div class="pelicula" id="pelicula"></div>
     </section>
   </main>
